--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <title>Layout Practice</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="box a">A</div>
+      <div class="box b">B</div>
+      <div class="box c">C</div>
+    </div>
+  </body>
 </html>
