--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="box a">A</div>
-      <div class="box b">B</div>
-      <div class="box c">C</div>
+      <div class="box a"></div>
+      <div class="box b"></div>
+      <div class="box c"></div>
     </div>
   </body>
 </html>
